[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Gamemode.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 354.0
margin_top = 377.0
margin_right = 448.0
margin_bottom = 537.0
rect_scale = Vector2( 3, 3 )

[node name="ModeKills" type="Button" parent="VBoxContainer"]
margin_right = 94.0
margin_bottom = 20.0
text = "Killer"

[node name="ModeTime" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 94.0
margin_bottom = 44.0
text = "Timer"

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 94.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="."]
margin_left = 222.0
margin_top = 157.0
margin_right = 340.0
margin_bottom = 171.0
rect_scale = Vector2( 5, 5 )
text = "Select Gamemode"

[connection signal="pressed" from="VBoxContainer/ModeKills" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/ModeTime" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
